refactor: update elasticsearch, jpa-mysql, and kafka modules
- replace term query with match query in elasticsearch movie services
- replace collect(Collectors.toList()) with toList() in jpa-mysql book services
- rename NewsConsumer to NewsListener and add key/timestamp handling in kafka